# lez-programs

./: CLAUDE.md  Cargo.toml  Makefile  README.md  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
amm/: Cargo.toml
amm-ui/: Main.qml  README.md  flake.nix  metadata.json
amm-ui/qml/: Main.qml  SwapCard.qml  TokenInput.qml
amm-ui/qml/components/: AddLiquidityForm.qml  EstimateInfoButton.qml  LiquidityActionTabs.qml  LiquidityConfirmationDialog.qml  PoolPositionSummary.qml  RemoveLiquidityForm.qml  SlippageToleranceControl.qml  SummaryRow.qml  SwapConfirmationDialog.qml  SwapSummary.qml  TokenAmountInput.qml
amm-ui/qml/components/liquidity/: AddLiquidityForm.qml  LiquidityActionTabs.qml  PoolPositionSummary.qml
amm-ui/qml/components/shared/: SlippageToleranceControl.qml  SuccessToast.qml
amm-ui/qml/components/swap/: SwapCard.qml  TokenInput.qml  TokenListItem.qml  TokenSelectorModal.qml
amm-ui/qml/pages/: LiquidityPage.qml  SwapPage.qml
amm-ui/qml/state/: DummyPoolState.qml  DummySwapState.qml
amm/core/: Cargo.toml
amm/core/src/: lib.rs
amm/methods/: Cargo.toml
amm/methods/guest/: Cargo.toml
amm/src/: add.rs  new_definition.rs  remove.rs  swap.rs  sync.rs  tests.rs
apps/amm/: metadata.json
apps/amm/qml/: Main.qml  NavBar.qml
apps/amm/qml/components/liquidity/: RemoveLiquidityForm.qml  SummaryRow.qml
apps/amm/qml/components/swap/: SwapCard.qml
artifacts/: amm-idl.json  ata-idl.json  stablecoin-idl.json  token-idl.json  token.idl.json  twap_oracle-idl.json
ata/: Cargo.toml
ata/core/: Cargo.toml
ata/core/src/: lib.rs
ata/methods/guest/: Cargo.toml
ata/src/: create.rs  tests.rs  transfer.rs
crates/lez-authority/: Cargo.toml  README.md
crates/lez-authority/src/: lib.rs
docs/: authority-model.md
integration_tests/: Cargo.toml
integration_tests/tests/: amm.rs  ata.rs  stablecoin.rs  token.rs
programs/amm/core/: Cargo.toml
programs/amm/methods/guest/: Cargo.toml
programs/amm/src/: lib.rs  new_definition.rs  swap.rs  sync.rs  tests.rs
programs/ata/methods/: Cargo.toml
programs/ata/methods/guest/: Cargo.toml
programs/ata/src/: burn.rs  lib.rs  tests.rs  transfer.rs
programs/integration_tests/tests/: amm.rs  ata.rs  stablecoin.rs  token.rs
programs/stablecoin/core/: Cargo.toml
programs/stablecoin/methods/guest/: Cargo.toml
programs/stablecoin/src/: lib.rs  repay_debt.rs  tests.rs
programs/token/: Cargo.toml  README.md
programs/token/core/src/: lib.rs
programs/token/methods/: Cargo.toml
programs/token/src/: burn.rs  lib.rs  mint.rs  new_definition.rs  print_nft.rs  set_authority.rs  tests.rs
programs/twap_oracle/: Cargo.toml
programs/twap_oracle/core/: Cargo.toml
programs/twap_oracle/core/src/: lib.rs
programs/twap_oracle/methods/: Cargo.toml
programs/twap_oracle/methods/guest/: Cargo.toml
programs/twap_oracle/src/: create_current_tick_account.rs  create_oracle_price_account.rs  create_price_observations.rs  lib.rs  record_tick.rs  update_current_tick.rs
scripts/: demo.sh
stablecoin/: Cargo.toml
stablecoin/core/: Cargo.toml
stablecoin/core/src/: lib.rs
stablecoin/methods/: Cargo.toml  build.rs
stablecoin/methods/guest/: Cargo.toml
stablecoin/methods/src/: lib.rs
stablecoin/src/: lib.rs  noop.rs  open_position.rs  tests.rs  withdraw_collateral.rs
token/: Cargo.toml
token/core/: Cargo.toml
token/core/src/: lib.rs
token/methods/guest/: Cargo.toml
token/src/: initialize.rs  mint.rs  new_definition.rs  print_nft.rs  tests.rs  transfer.rs
tools/idl-gen/: Cargo.toml
tools/idl-gen/src/: main.rs
twap_oracle/: Cargo.toml
twap_oracle/core/: Cargo.toml
twap_oracle/methods/guest/: Cargo.toml
twap_oracle/src/: noop.rs
