[workspace]
members = [
    "token/core",
    "token",
    "token/methods",
    "amm/core",
    "amm",
    "amm/methods",
    "ata/core",
    "ata",
    "ata/methods",
    "twap_oracle/core",
    "twap_oracle",
    "twap_oracle/methods",
    "stablecoin/core",
    "stablecoin",
    "stablecoin/methods",
    "integration_tests",
    "tools/idl-gen",
]
exclude = [
    "token/methods/guest",
    "amm/methods/guest",
    "ata/methods/guest",
    "stablecoin/methods/guest",
    "twap_oracle/methods/guest"
]
resolver = "2"

[workspace.dependencies]
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", features = ["host"] }
nssa = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", features = ["test-utils"] }
token_core = { path = "token/core" }
token_program = { path = "token" }
amm_core = { path = "amm/core" }
amm_program = { path = "amm" }
ata_core = { path = "ata/core" }
ata_program = { path = "ata" }
twap_oracle_core = { path = "twap_oracle/core" }
twap_oracle_program = { path = "twap_oracle" }
stablecoin_core = { path = "stablecoin/core" }
stablecoin_program = { path = "stablecoin" }
serde = { version = "1.0", features = ["derive"] }
borsh = { version = "1.5", features = ["derive"] }
risc0-zkvm = { version = "=3.0.5" }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "sync", "macros"] }

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
# deny (not forbid) so a targeted per-item #[allow] remains possible if ever needed
unsafe_code = "deny"

[workspace.lints.clippy]
# Deny only the groups where a new lint should always be a hard error.
# style/pedantic lints default to warn so toolchain upgrades don't break the
# build unexpectedly — they can be evaluated and addressed at our own pace.
correctness = { level = "deny", priority = -1 }
suspicious  = { level = "deny", priority = -1 }
perf        = { level = "deny", priority = -1 }
style       = { level = "warn", priority = -1 }

# Generated-code / placeholder blockers.
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

# Lint suppression hygiene.
allow_attributes = "warn"
allow_attributes_without_reason = "deny"

# Determinism, panic-safety, and arithmetic correctness.
arithmetic_side_effects = "deny"
indexing_slicing = "deny"

# Cast discipline.
as_conversions = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"

# API and enum evolution.
large_enum_variant = "deny"
wildcard_enum_match_arm = "deny"

# Too noisy for this codebase unless enforced selectively.
module_name_repetitions = "allow"
similar_names = "allow"
