[workspace]
members = [
    "programs/token/core",
    "programs/token",
    "programs/token/methods",
    "programs/amm/core",
    "programs/amm",
    "programs/amm/methods",
    "programs/ata/core",
    "programs/ata",
    "programs/ata/methods",
    "programs/twap_oracle/core",
    "programs/twap_oracle",
    "programs/twap_oracle/methods",
    "programs/stablecoin/core",
    "programs/stablecoin",
    "programs/stablecoin/methods",
    "programs/integration_tests",
    "tools/idl-gen",
]
exclude = [
    "programs/token/methods/guest",
    "programs/amm/methods/guest",
    "programs/ata/methods/guest",
    "programs/stablecoin/methods/guest",
    "programs/twap_oracle/methods/guest"
]
resolver = "2"

[workspace.dependencies]
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", features = ["host"] }
nssa = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", features = ["test-utils"] }
token_core = { path = "programs/token/core" }
token_program = { path = "programs/token" }
amm_core = { path = "programs/amm/core" }
amm_program = { path = "programs/amm" }
ata_core = { path = "programs/ata/core" }
ata_program = { path = "programs/ata" }
twap_oracle_core = { path = "programs/twap_oracle/core" }
twap_oracle_program = { path = "programs/twap_oracle" }
stablecoin_core = { path = "programs/stablecoin/core" }
stablecoin_program = { path = "programs/stablecoin" }
serde = { version = "1.0", features = ["derive"] }
borsh = { version = "1.5", features = ["derive"] }
risc0-zkvm = { version = "=3.0.5" }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "sync", "macros"] }

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
# deny (not forbid) so a targeted per-item #[allow] remains possible if ever needed
unsafe_code = "deny"

[workspace.lints.clippy]
# Deny only the groups where a new lint should always be a hard error.
# style/pedantic lints default to warn so toolchain upgrades don't break the
# build unexpectedly — they can be evaluated and addressed at our own pace.
correctness = { level = "deny", priority = -1 }
suspicious  = { level = "deny", priority = -1 }
perf        = { level = "deny", priority = -1 }
style       = { level = "warn", priority = -1 }

# Generated-code / placeholder blockers.
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

# Lint suppression hygiene.
allow_attributes = "warn"
allow_attributes_without_reason = "deny"

# Determinism, panic-safety, and arithmetic correctness.
arithmetic_side_effects = "deny"
indexing_slicing = "deny"

# Cast discipline.
as_conversions = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"

# API and enum evolution.
large_enum_variant = "deny"
wildcard_enum_match_arm = "deny"

# Too noisy for this codebase unless enforced selectively.
module_name_repetitions = "allow"
similar_names = "allow"
