[package]
name = "idl-gen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "idl-gen"
path = "src/main.rs"

[dependencies]
spel-framework-core = { git = "https://github.com/logos-co/spel.git", rev = "338129a5209e46d433bb068c96ab2eb7cc2601d9", features = [
  "idl-gen",
] }
serde_json = "1.0"
toml = "0.8"
