[package]
name = "idl-gen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "idl-gen"
path = "src/main.rs"

[dependencies]
spel-framework-core = { git = "https://github.com/logos-co/spel.git", rev = "ba6e87d086ed85c5ac095325d8a28f02e3d33ca2", features = [
  "idl-gen",
] }
serde_json = "1.0"
toml = "0.8"
