[package]
name = "idl-gen"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "idl-gen"
path = "src/main.rs"

[dependencies]
spel-framework-core = { git = "https://github.com/logos-co/spel.git", tag = "v0.3.0", features = [
  "idl-gen",
] }
# `preserve_order` keeps object keys in struct-declaration order when
# round-tripping through serde_json::Value (see main.rs), so the only
# reordering we apply is sorting the `types` array.
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = "0.8"
