[package]
name = "twap-oracle-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "twap_oracle"
path = "src/bin/twap_oracle.rs"

[dependencies]
spel-framework = { git = "https://github.com/logos-co/spel.git", tag = "v0.3.0", package = "spel-framework" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
clock_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
risc0-zkvm = { version = "=3.0.5", default-features = false }
twap_oracle_core = { path = "../../core" }
twap_oracle_program = { path = "../..", package = "twap_oracle_program" }
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"
